err/webscraping.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webscraping'...
Compiling './lib/python3.5/site-packages/webscraping/__init__.py'...
***   File "./lib/python3.5/site-packages/webscraping/__init__.py", line 13
    print name
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webscraping/common.py'...
***   File "./lib/python3.5/site-packages/webscraping/common.py", line 602
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webscraping/download.py'...
***   File "./lib/python3.5/site-packages/webscraping/download.py", line 303
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/webscraping/pdict.py'...
***   File "./lib/python3.5/site-packages/webscraping/pdict.py", line 633
    print cache[options.key]
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/webscraping/webkit.py'...
***   File "./lib/python3.5/site-packages/webscraping/webkit.py", line 323
    print 'save', filename
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/webscraping-1.6.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
